fixed minor issues

--- a/components/toggler/style.module.css
+++ b/components/toggler/style.module.css
@@ -11,3 +11,8 @@ div#tabs > div[data-slot="tabList"] > button{
 .tab-photos > div[data-slot="tabContent"] {
     width: 30%;
 }
+
+.tab-photos > div:hover {
+    transform: rotate(360deg);
+    transition: all 0.5s ease-out;
+}
